            - The inner TopologyLock class now takes its argument by reference.
            - Routine countFaces() now supports the case subdim == dim.
            - Add variants of countFaces(), faces() and face() that take
              the face dimension at runtime (this was already available
              in Python, but is now also available in C++).
        Class Triangulation<3>:
            - All of the changes listed for Triangulation<dim> above.
            - New routine generalAngleStructure().
            - Routine connectedSumDecomposition() is replaced with a new routine
              summands() with different behaviour: it does not insert the
              results into the packet tree or assign packet labels, and it
              throws on error.  The old connectedSumDecomposition() has been
              removed completely, since it relied on triangulations living
              in the packet tree.
            - Routine makeZeroEfficient() has been removed completely, since
              it relied on triangulations living in the packet tree.  Instead
              call summands(), which now formally guarantees 0-efficiency.
            - Overhauled retriangulate() to be faster, more generic, and
              support actions that take an isomorphism signature as well as
              a full triangluation.  This function is now also available
              through Python, and can take a pure Python function as its
              action argument.  It no longer runs in the background (even if a
              progress tracker is passed), and it now throws an exception
              if the triangulation has multiple components.
            - Routine simplifyExhaustive() no longer runs in the background
              (even if a progress tracker is passed), and it now throws an
              exception if the triangulation has multiple components.
            - Renamed hasNonTrivialSphereOrDisc() and